pubspec, title, img, deploy

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="Patient DB" content="LPG Patient DB">
+  <meta name="LPG Patient Care" content="LPG Patient Care">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,7 +13,7 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
-  <title>doctors_patient_database</title>
+  <title>LPG Patient Care</title>
   <link rel="manifest" href="manifest.json">
 
 </head>
